--- a/client/src/components/auth/RegisterPage/registerForm.css
+++ b/client/src/components/auth/RegisterPage/registerForm.css
@@ -4,3 +4,7 @@
   padding-left: 0;
   border: none;
 }
+
+.form-select{
+  margin: 0;
+}
