--- a/client/src/components/filter.js/filter.css
+++ b/client/src/components/filter.js/filter.css
@@ -23,7 +23,7 @@
   }
 
   .filterForm-label {
-    font-weight: bold;
+    font-size: 1.1rem;
   }
 
   .filterForm-submitWrapper {
