--- a/client/src/components/index/target.css
+++ b/client/src/components/index/target.css
@@ -49,12 +49,13 @@
 }
 
 .img-location {
-  margin: auto 1rem;
+  margin: auto 2rem;
   height: 1.5rem;
   max-width: 2rem;
 }
 
 .img-places {
+  margin: auto 2rem;
   height: 1.5rem;
   display: inline;
 }
@@ -65,8 +66,10 @@
   }
 
   .container {
-    display: grid;
-    grid-template-columns: repeat(3, 33%);
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
 
   .text-location {
